# MiService

./: .gitignore  main.py  micli.py  pyproject.toml
miservice/: context.py  miiocommand.py  miioservice.py
