[tool.poetry]
name = "miservice"
version = "0.1.0"
description = ""
authors = ["MrLYC <imyikong@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
aiohttp = "^3.8.1"
cattrs = "^22.1.0"
aioprometheus = {extras = ["aiohttp"], version = "^22.5.0"}

[tool.poetry.dev-dependencies]
black = {version = "^22.6.0", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
